--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apiyaml",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "api generator",
   "main": "esbuild_out/index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "chalk": "^4.1.2",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "json-schema-to-zod": "^2.6.0",
     "lodash": "^4.17.21",
     "yaml": "^2.6.0",
     "zod": "^3.23.8"
