--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apiyaml",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "api generator",
   "main": "esbuild_out/index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   "private": false,
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.2.0",
+    "@n8n/json-schema-to-zod": "^1.1.0",
     "chalk": "^4.1.2",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
