--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   },
   "private": false,
   "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^7.2.0",
+    "@asteasolutions/zod-to-openapi": "^7.3.4",
     "@n8n/json-schema-to-zod": "^1.1.0",
-    "chalk": "^4.1.2",
-    "commander": "^12.1.0",
-    "dotenv": "^16.4.5",
-    "json-schema-to-zod": "^2.6.0",
+    "chalk": "^5.4.1",
+    "commander": "^14.0.0",
+    "dotenv": "^16.5.0",
+    "json-schema-to-zod": "^2.6.1",
     "lodash": "^4.17.21",
-    "yaml": "^2.6.0",
-    "zod": "^3.23.8"
+    "yaml": "^2.8.0",
+    "zod": "^3.25.67"
   },
   "bin": {
     "apiyaml": "esbuild_out/index.js"
@@ -40,14 +40,15 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "firebase": "^11.0.2",
-    "jotai": "^2.10.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@types/lodash": "^4.17.18",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "firebase": "^11.9.1",
+    "jotai": "^2.12.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-infinite-scroll-hook": "^6.0.1",
     "sonner": "^1.7.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.8.3"
   }
 }
